--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
 	<groupId>org.city.metro</groupId>
 	<artifactId>metro-smart-card-city</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>	
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
